<resources>
    <string name="app_name">CaInfo</string>
    <string name="movie">Movie</string>
    <string name="tv_show">TV Show</string>
    <string name="food">Food</string>
    <string name="sports">Sports</string>
    <string name="weather">Weather</string>
    <string name="video">Video</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="now_playing">Now Playing</string>
    <string name="popular">Popular</string>
    <string name="up_coming">Up Coming</string>
    <string name="top_related">Top Related</string>
    <string name="airing_today">Airing Today</string>
    <string name="on_the_air">On The Air</string>
</resources>
